<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:id="@+id/etAccount"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:id="@+id/etPassword"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">
            <Button
                android:text="@string/login"
                android:id="@+id/btnLogin"
                style="@style/normalButtonStyle" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:background="#0FCCCC"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/btnRegisterNow" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>