<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChangePassword">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/common_label_width"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/original_password"
                android:id="@+id/textView"
                android:gravity="right"
                android:labelFor="@+id/old_password"
                android:layout_marginRight="2dp" />

            <EditText
                android:layout_width="@dimen/common_input_width"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/old_password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/common_label_width"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_password"
                android:id="@+id/textView2"
                android:gravity="right"
                android:labelFor="@+id/new_password"
                android:layout_marginRight="2dp" />

            <EditText
                android:layout_width="@dimen/common_input_width"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/new_password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="@dimen/common_label_width"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/repeat_new_string"
                android:id="@+id/textView3"
                android:gravity="right"
                android:labelFor="@+id/repeat_new_password"
                android:layout_marginRight="2dp" />

            <EditText
                android:layout_width="@dimen/common_input_width"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/repeat_new_password" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:id="@+id/submit" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
